# diagram

./: .dependency-cruiser.cjs  .gitignore  .prettierignore  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  SUPPORT.md  eslint.config.js  knip.json  lefthook.yml  nx.json  package.json  pnpm-lock.yaml  tsconfig.base.json  tsconfig.depcruise.json  tsconfig.json  vite.config.ts  vitest.config.ts  vitest.workspace.ts
.changeset/: arrange-ops.md  bundled-fonts.md  canvas-focus-ring-visible-only.md  clear-canvas.md  collab-rename-history.md  config.json  copy-paste-style.md  drawio-redos-entity-decode.md  editor-grid-snap-props.md  editor-umbrella-package.md  element-binding-helpers.md  element-cdn-assets.md  element-new-package.md  element-scene-before-ready.md  fix-context-menu-scope.md  fix-resize-flicker.md  focus-canvas-on-pointerdown.md  font-size-shortcuts.md  gif-default-adapter.md  grid-enabled-model.md  grid-on-by-default-snap-coupling.md  headless-svg-options.md  importers-edge-direction.md  legacy-alias-theme-scope.md  link-email-redos.md  msdf-baseline.md  offscreen-image-cache.md  offscreen-image-render.md  react-ui-portal-container.md  recording-target-measure.md  renderer-core-element-render-context.md  rotate-grip-icon-cursor.md  rotate-grip-oriented-box.md  rotated-shape-resize.md  rotation.md  scene-drop-all-elements-in-layer.md  scene-fallback-dimensions.md  serialization-side-effect-migrations.md  state-bind-hotkeys.md  state-text-edit-scale.md  (+3 more)
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
documentation/: README.md  SETUP.md  index.md
scripts/: build-wasm.sh  new-package.mjs  render-svg.ts  (+1 more)
wasm-src/text-shaper/: Cargo.toml
wasm-src/text-shaper/font/: LICENSE
wasm-src/text-shaper/src/: lib.rs
(+142 files in other folders)
